--- a/services/QuillLMS/app/assets/stylesheets/pages/custom_activity_pack/filter_column.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/custom_activity_pack/filter_column.scss
@@ -108,5 +108,10 @@
         }
       }
     }
+    @media (max-width: 1050px) {
+      &:not(.filter-open) {
+        display: none;
+      }
+    }
   }
 }
