--- a/services/QuillLMS/app/assets/stylesheets/pages/lesson_planner_and_unit_template_editor.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/lesson_planner_and_unit_template_editor.scss
@@ -421,7 +421,7 @@
     }
   }
 
-  section:not(.activity-row) {
+  section:not(.activity-row):not(.selected-activity-row) {
     border-bottom: none;
     &.name-the-unit {
       border-bottom: solid 1px #c0c0c0;
